# school-api

./: .copilot-commit-message-instructions.md  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
core/: adapters.py  admin.py  authentication.py  keycloak.py  models.py  pdf.py  permissions.py  serializers.py  services.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: week_dashboard_pdf.html
core/tests/: factories.py  test_api.py  test_dashboard.py  test_e2e.py  test_import.py  test_models.py  test_pdf.py  test_permissions.py  test_rotation.py
