[project]
name = "school-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "django-allauth[socialaccount]>=65.18.0",
    "django-cors-headers>=4.9",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "openpyxl>=3.1.5",
    "pyjwt[crypto]>=2.13.0",
    "requests>=2.34.2",
    "weasyprint>=69.0",
]
